--- a/docs/wearables/providers/introduction.mdx
+++ b/docs/wearables/providers/introduction.mdx
@@ -2,6 +2,9 @@
 title: "Supported providers"
 ---
 
+import OrgManagementAPI from '/snippets/org-management-api-upsell.mdx';
+import HistoricalPullLimitTable from '/snippets/historical-pull-limits.mdx';
+
 We currently Support over 300+ devices, a full list can be seen below.
 
 ## Cloud Based Providers
@@ -147,32 +150,20 @@ For more information on Apple HealthKit and Android Health Connect, please refer
 Vital fetches the historical data immediately when the connection is established. The pull range
 can be estimated by `[now - days_to_pull, now]`. 
 
-| Provider                                                                     | Default      | Configurable | Remarks |
-| ---------------------------------------------------------------------------- | ------------ | ------------ | ------- |
-| [Abbott LibreView](https://www.libreview.com)                                | 90 days      | ❌           | - |
-| [Fitbit](https://www.fitbit.com/global/uk/home)                              | 90 days      | ⚠️            | Activity and heartrate timeseries data are fixed to 14 days. |
-| [Garmin](https://www.garmin.com)                                             | 90 days      | ✅           | - |
-| [Google Fit](https://www.google.com/fit/)                                    | 90 days      | ✅           | - |
-| [Oura](https://ouraring.com)                                                 | 180 days     | ✅           | - |
-| [Peloton](https://www.onepeloton.com)                                        | 180 days     | ✅           | - |
-| [Renpho](https://renpho.com)                                                 | 180 days     | ✅           | - |
-| [Strava](https://www.strava.com)                                             | 14 days      | ✅           | - |
-| [Wahoo](https://wahoofitness.com)                                            | 180 days     | ✅           | - |
-| [Whoop](https://www.whoop.com)                                               | 180 days     | ✅           | - |
-| [Zwift](https://zwift.com)                                                   | 270 days     | ✅           | - |
-| [Withings](https://www.withings.com)                                         | 90 days      | ✅           | - |
-| [8Sleep](https://www.eightsleep.com)                                         | 90 days      | ✅           | - |
-| [Apple HealthKit](https://www.apple.com/uk/ios/health/) (SDK)                | 30 days      | ✅           | - |
-| [Android Health Connect](https://developer.android.com/health-connect) (SDK) | 30 days      | ❌           | Google restricts access to historical data to [30 days before the first successful permission request](https://developer.android.com/health-and-fitness/guides/health-connect/develop/frequently-asked-questions#time-range). |
-| [Hammerhead](https://www.hammerhead.io)                                      | 30 days      | ✅           | - |
-| [Dexcom](https://www.dexcom.com)                                             | 30 days      | ✅           | - |
-| [Dexcom (G6 And Older)](https://www.dexcom.com)                              | 1 day        | ❌           | - |
-| [MyFitnessPal](https://www.myfitnesspal.com)                                 | 14 days      | ✅           | - |
-| [Polar](https://www.polar.com/accesslink-api/#polar-accesslink-api)          | 28 days      | ❌           | Polar only supports historical backfill for Sleep and Sleep Stream resources. |
-| [Cronometer](https://www.cronometer.com)                                     | 28 days      | ✅           | - |
+<HistoricalPullLimitTable />
+
+
+### Customizing historical data pull range
+
+<OrgManagementAPI />
+
+You can configure the historical pull range using the [Team Data Pull Preferences](/api-reference/org-management/team-data-pull-preferences/upsert-team-data-pull-preferences)
+feature of the Org Management API.
+
+You can specify a number of days to backfill that uniformly applies to all resources of a provider, as well as overriding the
+the number of days to backfill for specific resources.
 
 <Info>
-
-To provide you with the best possible experience, for some providers we implement a mix of Webhook and Polling for different resources. Check out the [resources page](https://docs.tryvital.io/wearables/providers/Resources) for more info.
-
+The Team Data Pull Preferences you specified is _advisory_. There are scenarios in which Vital systems
+may not adhere strictly to your stated preferences.
 </Info>
