Welcome page editorial sprinkles 2024 Pt.2

--- a/docs/home/welcome.mdx
+++ b/docs/home/welcome.mdx
@@ -46,40 +46,36 @@ description: "Here you'll find guides, resources, and references to build using 
 ## Popular Topics
 
 <CardGroup cols={1}>
-  <Card title="Apple HealthKit" icon="apple" href="/wearables/guides/apple-healthkit">
-    Apple HealthKit is one of the biggest providers of fitness and health data.
-
-    Learn how to integrate with Apple HealthKit using Vital Mobile SDKs, available in
+  <Card title="Apple HealthKit" icon="apple" href="/wearables/guides/apple-healthkit" horizontal>
+    Learn how to integrate with Apple HealthKit through Vital Mobile SDKs, available in
     Native iOS, React Native and Flutter.
   </Card>
-  <Card title="Android Health Connect" icon="android" href="/wearables/guides/android-health-connect">
-    Android Health Connect is one of the emerging fitness and health data platform.
-
-    Learn how to integrate with Apple HealthKit using Vital Mobile SDKs, available in
+  <Card title="Android Health Connect" icon="android" href="/wearables/guides/android-health-connect" horizontal>
+    Learn how to integrate with Android Health Connect through Vital Mobile SDKs, available in
     Native Android, React Native and Flutter.
   </Card>
   <Card
     title="Vital Link Widget"
     icon="link"
     href="/wearables/connecting-providers/introduction"
+    horizontal
   >
     Vital Link enables your users to connect their account with with their wearable data providers.
-  
     Learn how to integrate the Link Widget for a no-fuzz starter integration.
   </Card>
   <Card
     title="Vital Link API"
     icon="link"
     href="/wearables/connecting-providers/custom_widget"
+    horizontal
   >
     Learn how to use the Vital Link API to build your own Link Widget.
   </Card>
-  <Card title="Timestamps and Time Zones" icon="clock" href="/wearables/providers/timestamps-and-time-zones">
+  <Card title="Timestamps and Time Zones" icon="clock" href="/wearables/providers/timestamps-and-time-zones" horizontal>
     Learn about timestamp and time zone handling of wearable device data.
   </Card>
-  <Card title="Webhooks & Events" icon="radar" href="/webhooks/introduction">
+  <Card title="Webhooks & Events" icon="radar" href="/webhooks/introduction" horizontal>
     Vital can push wearable device data as webhook events to you as soon as they are discovered.
-
     Learn about the delivery stages, event structure as well as the advanced ETL Pipeline options
     for high volume needs.
   </Card>
@@ -87,10 +83,9 @@ description: "Here you'll find guides, resources, and references to build using 
     title="Synthetic Data"
     icon="parachute-box"
     href="/wearables/providers/test_data"
+    horizontal
   >
-    Demo Connections generate synthetic data that mimick specific providers, which provides
-    an alternative way for you to test your Vital integration.
-
-    Learn how to use demo connections.
+    Learn how to use Demo Connections — which emit synthetic data mimicking selected providers — as
+    an alternative way to test your Vital integration.
   </Card>
 </CardGroup>
