--- a/docs/webhooks/etl-pipelines.mdx
+++ b/docs/webhooks/etl-pipelines.mdx
@@ -70,7 +70,7 @@ between destinations.
 
 There can only be one _preferred_ destination, and the secondary destination(s) do not enjoy the same reliability
 guarantee as the _preferred_ one.
-</Note>
+</Info>
 
 ### Pushed Historical Data
 
