--- a/docs/wearables/sdks/installation.mdx
+++ b/docs/wearables/sdks/installation.mdx
@@ -86,23 +86,24 @@ pod 'VitalHealthKit'
 
 ## Android
 
-You can install the Vital SDK by adding the followings to your `build.gradle` file:
+Add the Sonatype OSS Release Maven repository to your `build.gradle` file:
 
 ```groovy
 repositories {
   ...
-  maven { url 'https://jitpack.io' }
+  maven { url 'https://s01.oss.sonatype.org/content/repositories/releases/' }
 }
 ```
 
-```groovy
-implementation 'com.github.tryVital.vital-android:VitalClient:$vital_version'
-implementation 'com.github.tryVital.vital-android:VitalHealthConnect:$vital_version'
-implementation 'com.github.tryVital.vital-android:VitalDevices:$vital_version'
-```
+Then include the Android SDK artifacts you need as dependencies of your app or library modules:
 
-Replace `$vital_version` with the latest version of the SDK. You only need to add the dependencies
-for the components you want to use.
+```groovy
+def vital_version = '3.2.1'
+
+implementation 'io.tryvital:vital-client:$vital_version'
+implementation 'io.tryvital:vital-health-connect:$vital_version'
+implementation 'io.tryvital:vital-devices:$vital_version'
+```
 
 ## React Native
 
