Mention the Google Play Store policy in docs.

--- a/docs/wearables/guides/android-health-connect.mdx
+++ b/docs/wearables/guides/android-health-connect.mdx
@@ -9,6 +9,13 @@ Refer to the [Mobile SDK Installation](/wearables/sdks/installation) and [Vital 
 instructions and general API usage. This guide contains information on the the behaviour and required configuration
 specific to the Android Health Connect integration.
 
+## Review the Google Play Store policy
+
+Apps using Android Health Connect require prior Google approval before they can be released on Google Play Store.
+
+Check out the official [Google Play Store policy on Android Health Connect](https://support.google.com/googleplay/android-developer/answer/12991134?hl=en-GB).
+Note that the application form is located under the "How do I access data through Health Connect?" section.
+
 ## Configure your AndroidManifest.xml
 
 ### Health Connect privacy dialogue
