Update Event Catalog from 356c62f9b4c45b567ce9aec48c67b4a5430b0844

--- a/docs/event-catalog/labtest.appointment.updated.mdx
+++ b/docs/event-catalog/labtest.appointment.updated.mdx
@@ -1,10 +1,10 @@
 ---
-title: "labtest.appointment.update"
+title: "labtest.appointment.updated"
 description: "An apppointment has been updated or created"
 ---
 # Properties
 <ResponseField name="event_type" type="const string" required="true">
-Constant: `labtest.appointment.update`
+Constant: `labtest.appointment.updated`
 </ResponseField>
 <ResponseField name="team_id" type="string" required="true">
 </ResponseField>
@@ -137,20 +137,20 @@ Any of:
       }
     ],
     "iana_timezone": "America/New_York",
-    "id": "753e9b31-a541-4a67-b5ad-4642d2ddeb4d",
+    "id": "a2eb7fa4-d80e-4297-94c2-14b8093bbd21",
     "location": {
       "lat": 37.7749295,
       "lng": -122.4194155
     },
-    "order_id": "75fce6e9-1ea3-43f6-8a26-84f16b2b0817",
+    "order_id": "953df43f-abfb-4635-b767-a5897d40e9da",
     "provider": "getlabs",
     "provider_id": "123",
     "start_at": "2022-01-01T00:00:00",
     "status": "confirmed",
     "type": "phlebotomy",
-    "user_id": "7e917f07-e5d0-4392-aa51-7d7d1cc62a61"
+    "user_id": "3305b8ad-71db-4317-96e2-11fda6d3c9b9"
   },
-  "event_type": "labtest.appointment.update",
+  "event_type": "labtest.appointment.updated",
   "team_id": "e89cc9fe-e1c0-41bc-a83a-728b8cb1056f",
   "user_id": "fac593ed-f371-4aea-9210-9332f1b19bec"
 }
