Fix aggregation overview diagram link

--- a/docs/api-reference/horizon-ai/aggregation/overview.mdx
+++ b/docs/api-reference/horizon-ai/aggregation/overview.mdx
@@ -1,7 +1,7 @@
 The Horizon AI Aggregation API consolidates the multitude of user data collected across [wearable data providers](/wearables/providers/introduction)
 and [source types](/wearables/providers/data-attributions#source-type) into simple tabular outputs.
 
-![](img/aggregation/overview.png)
+![A high-level illustration of the inputs and outputs of the Aggregation API](/img/aggregation/overview.png)
 
 <Card title="Consolidation" icon="merge" horizontal>
 Work with simple tabular outputs, and offload the dirty work to Horizon AI — the data gathering, prioritization and sanitization
