--- a/docs/lab/workflow/create-test.mdx
+++ b/docs/lab/workflow/create-test.mdx
@@ -2,7 +2,7 @@
 title: "Creating a Lab Test"
 ---
 
-Vital provides a way to create your own lab tests. These are made up of:
+Vital provides a way to create your own lab tests. Lab tests are a collection or pre-set of orderable markers. These are made up of:
 
 1. One or more marker IDs or Provider IDs.
 3. The collection method: `testkit`, `walk_in_test`, or `at_home_phlebotomy`.
