--- a/docs/home/libraries.mdx
+++ b/docs/home/libraries.mdx
@@ -8,12 +8,13 @@ We have created a few libraries to help you integrate with the Vital API. We'll 
 
 |                                                                      |                                                      |
 | -------------------------------------------------------------------- | ---------------------------------------------------- |
-| [vital-python](https://pypi.org/project/vital)                       | Python library for calling Vital API on your backend |
-| [vital-link](https://www.npmjs.com/package/@tryvital/vital-link)     | React Library for initializing link                  |
-| [vital-node](https://www.npmjs.com/package/@tryvital/vital-node)     | Vital Node Client                                    |
 | [vital-ios](https://github.com/tryVital/vital-ios)                   | Vital iOS Client                                     |
 | [vital-android](https://github.com/tryVital/vital-android)           | Vital Android Client                                 |
 | [vital-flutter](https://github.com/tryVital/vital-flutter)           | Vital Flutter Client                                 |
 | [vital-react-native](https://github.com/tryVital/vital-react-native) | Vital React Native Client                            |
-| Java                                                                 | Soon to be added                                     |
-| Go                                                                   | Soon to be added                                     |
+| [vital-link](https://www.npmjs.com/package/@tryvital/vital-link)     | React Library for initializing link                  |
+| [Java](https://github.com/tryVital/vital-java)                       | Vital Java Client                                    |
+| [Go](https://github.com/tryVital/vital-go)                           | Vital Go Client                                      |
+| [vital-node](https://www.npmjs.com/package/@tryvital/vital-node)     | Vital Node Client                                    |
+| [vital-python](https://pypi.org/project/vital)                       | Python library for calling Vital API on your backend |
+| [vital-connect](https://github.com/tryVital/vital-connect-rn)        | Whitelabel App using Vital's API                     |
